--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>OceanOne Beach Hotel</title>
   </head>
@@ -24,6 +30,7 @@
         <ul class="nav__links" id="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#room">Room</a></li>
           <li><a href="#service">Services</a></li>
           <li><a href="#explore">Explore</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -31,7 +38,7 @@
       </nav>
       <div class="section__container header__container" id="home">
         <br />
-        <h1> Classic Coastal Charm</h1>
+        <h1>Classic Coastal Charm</h1>
       </div>
     </header>
 
@@ -58,9 +65,6 @@
             <input type="text" placeholder="Guest" />
           </div>
         </div>
-        <div class="input__group input__btn">
-          <button class="btn">CHECH OUT</button>
-        </div>
       </form>
     </section>
 
@@ -73,8 +77,8 @@
         <h2 class="section__header">The Best Holidays Start Here!</h2>
         <p class="section__description">
           With a focus on quality accommodations, personalized experiences, and
-          seamless booking, our platform is dedicated to ensuring that every
-          traveler embarks on their dream holiday with confidence and
+          seamless booking, Seaside Serenity Hotel is dedicated to ensuring that
+          every guest embarks on their dream beach holiday with confidence and
           excitement.
         </p>
         <div class="about__btn">
@@ -83,7 +87,7 @@
       </div>
     </section>
 
-    <section class="section__container room__container">
+    <section class="section__container room__container" id="room">
       <p class="section__subheader">OUR LIVING ROOM</p>
       <h2 class="section__header">The Most Memorable Rest Time Starts Here.</h2>
       <div class="room__grid">
@@ -203,7 +207,49 @@
       </div>
     </section>
 
-    <footer class="footer" id="contact">
+    <section class="section__container about__container" id="contact">
+      <div class="about__content">
+        <p class="section__subheader">CONTACT US</p>
+        <h2 class="section__header">Get In Touch With Us.</h2>
+        <form class="section__description">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Full Name</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="exampleFormControlInput1"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Email Address</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"
+              >Your Message</label
+            >
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
+          </div>
+          <div class="about__btn">
+            <button class="btn">Send Message</button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
       <div class="section__container footer__container">
         <div class="footer__col">
           <div class="logo">
