style: Add left margin to footer section headings

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <button class="btn">Book Now</button>
         </div>
         <div class="footer__col">
-          <h4>QUICK LINKS</h4>
+          <h4 style="margin-left: 30px">QUICK LINKS</h4>
           <ul class="footer__links">
             <li><a href="#">Special Offers & Packages</a></li>
             <li><a href="#">Room Types & Amenities</a></li>
@@ -272,7 +272,7 @@
           </ul>
         </div>
         <div class="footer__col">
-          <h4>OUR SERVICES</h4>
+          <h4 style="margin-left: 30px">OUR SERVICES</h4>
           <ul class="footer__links">
             <li><a href="#">Concierge Assistance</a></li>
             <li><a href="#">Flexible Booking Options</a></li>
@@ -281,11 +281,11 @@
           </ul>
         </div>
         <div class="footer__col">
-          <h4>CONTACT US</h4>
+          <h4 style="margin-left: 30px">CONTACT US</h4>
           <ul class="footer__links">
             <li><a href="#">ocenanone@info.com</a></li>
           </ul>
-          <div class="footer__socials">
+          <div class="footer__socials" style="margin-left: 30px">
             <a href="#"><img src="assets/facebook.png" alt="facebook" /></a>
             <a href="#"><img src="assets/instagram.png" alt="instagram" /></a>
             <a href="#"><img src="assets/youtube.png" alt="youtube" /></a>
@@ -297,6 +297,7 @@
         Copyright © <span id="year"></span> OceanOne. All rights reserved.
       </div>
     </footer>
+
     <script>
       document.getElementById("year").textContent = new Date().getFullYear();
     </script>
